--- a/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -405,7 +405,7 @@
                             "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
                         },
                         "Sched": {
-                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_SchedB_15350"
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_SchedM_15360"
                         },
                         "SwiOffDiffT": {
                             "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
@@ -2027,6 +2027,45 @@
             },
             "type": "object"
         },
+        "PLC1.FB_BA_OD": {
+            "additionalProperties": false,
+            "properties": {
+                "PlcVariables": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "bAcknowledgeRm": {
+                            "$ref": "#/definitions/PLCVar.System.Boolean"
+                        },
+                        "nInstanceID": {
+                            "$ref": "#/definitions/PLCVar.System.UInt32"
+                        },
+                        "sDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolPath": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sTag": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "type": "object"
+        },
         "PLC1.FB_BA_PID": {
             "additionalProperties": false,
             "properties": {
@@ -3075,7 +3114,208 @@
                     "additionalProperties": false,
                     "properties": {
                         "SiteA": {
-                            "$ref": "#/definitions/PLC1.PLC_1.MAIN.SiteA"
+                            "$ref": "#/definitions/PLC1.Standard.MAIN.SiteA"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "type": "object"
+        },
+        "PLC1.Standard.MAIN.B": {
+            "additionalProperties": false,
+            "properties": {
+                "Children": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "IFP": {
+                            "$ref": "#/definitions/PLC1.Standard.MAIN.IFP"
+                        }
+                    },
+                    "type": "object"
+                },
+                "PlcVariables": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "bAcknowledgeRm": {
+                            "$ref": "#/definitions/PLCVar.System.Boolean"
+                        },
+                        "nInstanceID": {
+                            "$ref": "#/definitions/PLCVar.System.UInt32"
+                        },
+                        "sDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolPath": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sTag": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "type": "object"
+        },
+        "PLC1.Standard.MAIN.F01": {
+            "additionalProperties": false,
+            "properties": {
+                "Children": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "AC": {
+                            "$ref": "#/definitions/PLC1.FB_BA_AC"
+                        },
+                        "G": {
+                            "$ref": "#/definitions/PLC1.FB_BA_General"
+                        },
+                        "H": {
+                            "$ref": "#/definitions/PLC1.FB_BA_H"
+                        },
+                        "OD": {
+                            "$ref": "#/definitions/PLC1.FB_BA_OD"
+                        }
+                    },
+                    "type": "object"
+                },
+                "PlcVariables": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "bAcknowledgeRm": {
+                            "$ref": "#/definitions/PLCVar.System.Boolean"
+                        },
+                        "nInstanceID": {
+                            "$ref": "#/definitions/PLCVar.System.UInt32"
+                        },
+                        "sDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolPath": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sTag": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "type": "object"
+        },
+        "PLC1.Standard.MAIN.IFP": {
+            "additionalProperties": false,
+            "properties": {
+                "Children": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "F01": {
+                            "$ref": "#/definitions/PLC1.Standard.MAIN.F01"
+                        }
+                    },
+                    "type": "object"
+                },
+                "PlcVariables": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "bAcknowledgeRm": {
+                            "$ref": "#/definitions/PLCVar.System.Boolean"
+                        },
+                        "nInstanceID": {
+                            "$ref": "#/definitions/PLCVar.System.UInt32"
+                        },
+                        "sDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolPath": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sTag": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "type": "object"
+        },
+        "PLC1.Standard.MAIN.SiteA": {
+            "additionalProperties": false,
+            "properties": {
+                "Children": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "B": {
+                            "$ref": "#/definitions/PLC1.Standard.MAIN.B"
+                        }
+                    },
+                    "type": "object"
+                },
+                "PlcVariables": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "bAcknowledgeRm": {
+                            "$ref": "#/definitions/PLCVar.System.Boolean"
+                        },
+                        "nInstanceID": {
+                            "$ref": "#/definitions/PLCVar.System.UInt32"
+                        },
+                        "sDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolPath": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sTag": {
+                            "$ref": "#/definitions/PLCVar.System.String"
                         }
                     },
                     "type": "object"
@@ -4795,7 +5035,7 @@
         "TcHmiBaServerExtension": {
             "ENABLED": true,
             "NAME": "TcHmiBaServerExtension",
-            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.1-beta\\runtimes\\any\\native\\",
+            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.2\\runtimes\\any\\native\\",
             "REQUIRED": false,
             "STARTUPTYPE": 1
         },
@@ -6750,12 +6990,13 @@
         },
         "PLC1": {
             "ACCESS": 3,
+            "CUSTOMERDATA": "",
             "DOMAIN": "TcHmiBaServerExtension",
-            "HIDDEN": false,
             "MAPPING": "PLC1",
             "SCHEMA": {
                 "$ref": "tchmi:server#/definitions/PLC1"
-            }
+            },
+            "USEMAPPING": true
         },
         "RefreshDefinitions": {
             "ACCESS": 3,
@@ -7067,6 +7308,20 @@
             },
             "USEMAPPING": true
         },
+        "TcHmiBaServerExtension.CheckBaDeviceMapping": {
+            "ACCESS": 3,
+            "DOMAIN": "TcHmiBaServerExtension",
+            "HIDDEN": true,
+            "MAPPING": "CheckBaDeviceMapping",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "type": "string"
+                }
+            },
+            "USEMAPPING": true
+        },
         "TcHmiBaServerExtension.Config": {
             "ACCESS": 0,
             "DOMAIN": "TcHmiBaServerExtension",
@@ -7253,6 +7508,28 @@
             "DOMAIN": "TcHmiBaServerExtension",
             "HIDDEN": true,
             "MAPPING": "GetBaObject",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "BaObjectInstancePath": {
+                            "type": "string"
+                        },
+                        "DeviceName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "TcHmiBaServerExtension.GetBaObjectTexts": {
+            "ACCESS": 3,
+            "DOMAIN": "TcHmiBaServerExtension",
+            "HIDDEN": true,
+            "MAPPING": "GetBaObjectTexts",
             "OPTIONS": {},
             "SCHEMA": {
                 "function": true,
@@ -7941,11 +8218,13 @@
                 "SubscribeEvents": 3,
                 "TcHmiBaServerExtension.AssignBaObjectToUnusedTrend": 3,
                 "TcHmiBaServerExtension.ChangeLocale": 3,
+                "TcHmiBaServerExtension.CheckBaDeviceMapping": 3,
                 "TcHmiBaServerExtension.ConfirmBaObject": 3,
                 "TcHmiBaServerExtension.GetBaDevice": 3,
                 "TcHmiBaServerExtension.GetBaDeviceProjectStructure": 3,
                 "TcHmiBaServerExtension.GetBaDevices": 3,
                 "TcHmiBaServerExtension.GetBaObject": 3,
+                "TcHmiBaServerExtension.GetBaObjectTexts": 3,
                 "TcHmiBaServerExtension.GetEnumInfo": 3,
                 "TcHmiBaServerExtension.GetReferringObjects": 3,
                 "TcHmiBaServerExtension.GetStateTexts": 3,
@@ -8024,16 +8303,16 @@
     "USERSELECTTYPE": 0,
     "VIDEOSEGMENTSIZE": 1048576,
     "VIRTUALDIRECTORIES": {
-        "/": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\TF8040 Template Samples HMI",
-        "/Beckhoff.TwinCAT.HMI.BA.Controls": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.1.1-beta\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Framework": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.1.1-beta\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Icons": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.1.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.1-beta",
-        "/Beckhoff.TwinCAT.HMI.Controls": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.746.0\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.Functions": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.746.0\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.746.0\\runtimes\\native1.12-tchmi",
-        "/bin": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\TF8040 Template Samples HMI\\bin\\",
-        "/bin/framework": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\TF8040 Template Samples HMI\\bin\\framework",
-        "/framework": "C:\\GIT\\SharedComponents\\Source\\TF8040 Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.746.0\\runtimes\\native1.12-tchmi"
+        "/": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\TF8040 Template Samples HMI",
+        "/Beckhoff.TwinCAT.HMI.BA.Controls": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.1.2\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Framework": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.1.2\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Icons": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.1.2\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.2",
+        "/Beckhoff.TwinCAT.HMI.Controls": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.746.3\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.Functions": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.746.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.746.0\\runtimes\\native1.12-tchmi",
+        "/bin": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\TF8040 Template Samples HMI\\bin\\",
+        "/bin/framework": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\TF8040 Template Samples HMI\\bin\\framework",
+        "/framework": "C:\\GIT\\SharedComponents\\Source\\Samples\\Template Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.746.3\\runtimes\\native1.12-tchmi"
     }
 }
