--- a/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.tpl.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.tpl.json
@@ -1,5 +1,5 @@
 ﻿{
-  "$schema": "../../Packages/Beckhoff.TwinCAT.HMI.Framework-12.746.0/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "$schema": "../../Packages/Beckhoff.TwinCAT.HMI.Framework-12.746.3/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -52,7 +52,7 @@
   ],
   "userControls": [
     {
-      "url": "Content/Layouts/PipeLayout1.usercontrol"
+      "url": "Content/Layouts/AHU_PipeLayout.usercontrol"
     },
     {
       "url": "Navigation/HeaderMenu.usercontrol"
@@ -80,12 +80,12 @@
       "keepAlive": true
     },
     {
-      "url": "Content/Plants/SiteA_B_IFP01_F01_AC_TKA11.content",
+      "url": "Content/Plants/SiteA_B_IFP_F01_AC_RLT01.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": true
     },
     {
-      "url": "Content/Plants/SiteA_B_IFP01_F01_H_HZK01.content",
+      "url": "Content/Plants/SiteA_B_IFP_F01_HTG_HZK01.content",
       "preload": false,
       "keepAlive": true
     }
