--- a/Template Samples/HMI/TF8040 Template Samples HMI/packages.config
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="1.1.1-beta" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="1.1.1-beta" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="1.1.1" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.ServerExtension" version="1.1.1-beta" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Controls" version="12.746.0" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Framework" version="12.746.0" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Functions" version="12.746.0" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.ResponsiveNavigation" version="12.746.0" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="1.1.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="1.1.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="1.1.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.ServerExtension" version="1.1.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Controls" version="12.746.3" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Framework" version="12.746.3" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Functions" version="12.746.3" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.ResponsiveNavigation" version="12.746.3" targetFramework="native1.12-tchmi" />
 </packages>
