--- a/Template Samples/HMI/TF8040 Template Samples HMI/tsconfig.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/tsconfig.json
@@ -28,6 +28,6 @@
     "bin/"
   ],
   "include": [
-    "C:/GIT/SharedComponents/Source/TF8040 Template Samples/HMI/Packages/Beckhoff.TwinCAT.HMI.Framework.12.746.0/runtimes/native1.12-tchmi/TcHmi.d.ts"
+    "C:/GIT/SharedComponents/Source/Samples/Template Samples/HMI/Packages/Beckhoff.TwinCAT.HMI.Framework.12.746.3/runtimes/native1.12-tchmi/TcHmi.d.ts"
   ]
 }
