TF8040 Concept Samples HMI: - update nuget packages; - bump version to 1.0.0.1;

--- a/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -7156,7 +7156,7 @@
         "TcHmiBaServerExtension": {
             "ENABLED": true,
             "NAME": "TcHmiBaServerExtension",
-            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.0-beta\\runtimes\\any\\native\\",
+            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.2\\runtimes\\any\\native\\",
             "REQUIRED": false,
             "STARTUPTYPE": 1
         },
@@ -9867,6 +9867,20 @@
             },
             "USEMAPPING": true
         },
+        "TcHmiBaServerExtension.CheckBaDeviceMapping": {
+            "ACCESS": 3,
+            "DOMAIN": "TcHmiBaServerExtension",
+            "HIDDEN": true,
+            "MAPPING": "CheckBaDeviceMapping",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "type": "string"
+                }
+            },
+            "USEMAPPING": true
+        },
         "TcHmiBaServerExtension.Config": {
             "ACCESS": 0,
             "CUSTOMERDATA": "",
@@ -10060,6 +10074,28 @@
             "DOMAIN": "TcHmiBaServerExtension",
             "HIDDEN": true,
             "MAPPING": "GetBaObject",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "BaObjectInstancePath": {
+                            "type": "string"
+                        },
+                        "DeviceName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "TcHmiBaServerExtension.GetBaObjectTexts": {
+            "ACCESS": 3,
+            "DOMAIN": "TcHmiBaServerExtension",
+            "HIDDEN": true,
+            "MAPPING": "GetBaObjectTexts",
             "OPTIONS": {},
             "SCHEMA": {
                 "function": true,
@@ -10792,11 +10828,13 @@
                 "SubscribeEvents": 3,
                 "TcHmiBaServerExtension.AssignBaObjectToUnusedTrend": 3,
                 "TcHmiBaServerExtension.ChangeLocale": 3,
+                "TcHmiBaServerExtension.CheckBaDeviceMapping": 3,
                 "TcHmiBaServerExtension.ConfirmBaObject": 3,
                 "TcHmiBaServerExtension.GetBaDevice": 3,
                 "TcHmiBaServerExtension.GetBaDeviceProjectStructure": 3,
                 "TcHmiBaServerExtension.GetBaDevices": 3,
                 "TcHmiBaServerExtension.GetBaObject": 3,
+                "TcHmiBaServerExtension.GetBaObjectTexts": 3,
                 "TcHmiBaServerExtension.GetEnumInfo": 3,
                 "TcHmiBaServerExtension.GetReferringObjects": 3,
                 "TcHmiBaServerExtension.GetStateTexts": 3,
@@ -10884,16 +10922,16 @@
     "USERSELECTTYPE": 0,
     "VIDEOSEGMENTSIZE": 1048576,
     "VIRTUALDIRECTORIES": {
-        "/": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\TF8040 Concept Samples HMI",
-        "/Beckhoff.TwinCAT.HMI.BA.Controls": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.1.0-beta\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Framework": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.1.0-beta\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Icons": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.1.0\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.0-beta",
-        "/Beckhoff.TwinCAT.HMI.Controls": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.746.0\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.Functions": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.746.0\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.746.0\\runtimes\\native1.12-tchmi",
-        "/bin": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\TF8040 Concept Samples HMI\\bin\\",
-        "/bin/framework": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\TF8040 Concept Samples HMI\\bin\\framework",
-        "/framework": "C:\\GIT\\SharedComponents\\Source\\TF8040 Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.746.0\\runtimes\\native1.12-tchmi"
+        "/": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\TF8040 Concept Samples HMI",
+        "/Beckhoff.TwinCAT.HMI.BA.Controls": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.1.2\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Framework": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.1.2\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Icons": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.1.2\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.2",
+        "/Beckhoff.TwinCAT.HMI.Controls": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.746.3\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.Functions": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.746.3\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.746.3\\runtimes\\native1.12-tchmi",
+        "/bin": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\TF8040 Concept Samples HMI\\bin\\",
+        "/bin/framework": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\TF8040 Concept Samples HMI\\bin\\framework",
+        "/framework": "C:\\GIT\\SharedComponents\\Source\\Samples\\Conecpt Samples\\HMI\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.746.3\\runtimes\\native1.12-tchmi"
     }
 }
